--- a/pom.xml
+++ b/pom.xml
@@ -34,19 +34,15 @@
             <version>1.3.65</version>
         </dependency>
 
-        <!-- log4j2 -->
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>2.11.2</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <version>1.7.25</version>
         </dependency>
 
-        <!-- SLF4J Bridge -->
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j-impl</artifactId>
-            <version>2.11.2</version>
-        </dependency>
+
+
+
 
         <!-- WEB DEPENDENCIES -->
 
@@ -62,11 +58,7 @@
             <artifactId>htmlunit</artifactId>
             <version>2.44.0</version>
         </dependency>
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>htmlunit-driver</artifactId>
-            <version>2.44.0</version>
-        </dependency>
+
 
     </dependencies>
 
@@ -95,7 +87,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>Main</mainClass>
+                                    <mainClass>ceng.estu.main.SharGozBot</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
